--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="utf-8" />
     <title>Drum Kit</title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Arvo"
-      rel="stylesheet"
-    />
-    <!-- font-awesome -->
-    <script
-      src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
-      data-auto-a11y="true"
-    ></script>
+
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" />
   </head>
 
   <body>
+
+    <!-- heading -->
     <h1 id="title">Drum 🥁 Kit</h1>
+
+    <!-- drum set -->
     <div class="set">
       <button class="w drum">w</button>
       <button class="a drum">a</button>
@@ -27,7 +25,10 @@
       <button class="l drum">l</button>
     </div>
 
+    <!-- footer -->
     <footer>Made with ❤️ in India.</footer>
+
+    <!-- js script -->
     <script src="index.js"></script>
   </body>
 </html>
